<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_bg">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:id="@+id/loginAppLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">
    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPhoneNumberInput"
        android:layout_below="@id/loginAppLogo"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPasswordInput"
        android:layout_below="@id/loginPhoneNumberInput"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginLinearLayout"
        android:orientation="horizontal"
        android:layout_below="@id/loginPasswordInput"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rememberMeBox"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:text="@string/remember_me"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="17dp">
        </androidx.appcompat.widget.AppCompatCheckBox>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forget_password"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginLeft="80dp"
            android:text="@string/forget_password">
        </TextView>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_below="@id/loginLinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:padding="17dp"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:background="@drawable/buttons"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adminTV"
        android:text="@string/i_am_an_admin"
        android:layout_below="@id/login_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginRight="22dp"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notAdminTV"
        android:text="@string/i_am_not_an_admin"
        android:layout_below="@id/login_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="22dp"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"/>



</RelativeLayout>