<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productName"
            android:text="@string/product_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal">
        </TextView>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/productImage"
            android:layout_below="@id/productName"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productPrice"
            android:layout_below="@id/productImage"
            android:text="@string/product_price"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productDescription"
            android:layout_below="@id/productPrice"
            android:text="@string/product_description"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal">
        </TextView>
    </RelativeLayout>

</androidx.cardview.widget.CardView>