<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistersActivity"
    android:background="@drawable/register_bg">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:id="@+id/registerAppLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">
    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerNameInput"
        android:layout_below="@id/registerAppLogo"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerPhoneNumberInput"
        android:layout_below="@id/registerNameInput"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerPasswordInput"
        android:layout_below="@id/registerPhoneNumberInput"
        android:background="@drawable/inputs"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold">
    </EditText>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:layout_below="@id/registerPasswordInput"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:padding="17dp"
        android:textColor="@android:color/white"
        android:text="@string/create_account"
        android:background="@drawable/buttons"/>


</RelativeLayout>